--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,10 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="DreZZing" />
 		<link rel="manifest" href="%sveltekit.assets%/icon/site.webmanifest" />
+
+		<meta name="theme-color" content="#ffffff" />
+		<meta name="color-scheme" content="only light" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
