--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/icon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icon/favicon.svg" />
+		<link rel="shortcut icon" href="%sveltekit.assets%/icon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icon/apple-touch-icon.png" />
+		<meta name="apple-mobile-web-app-title" content="DreZZing" />
+		<link rel="manifest" href="%sveltekit.assets%/icon/site.webmanifest" />
+
+		<meta name="theme-color" content="#ffffff" />
+		<meta name="color-scheme" content="only light" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
