--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,6 @@
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover" data-sveltekit-preload-code="hover">
-        <div style="display: contents">%sveltekit.body%</div>
+        %sveltekit.body%
     </body>
 </html>
